Setup Vitest, add Github CI check.yml workflow (#1)

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
 		"test": "vitest run",
 		"test:watch": "vitest run --watch",
 		"test:cov": "vitest run --coverage.enabled --coverage.all",
-		"test:e2e": "vitest run --config ./test/vitest-e2e.config.ts",
+		"test:e2e": "vitest run --config vitest-e2e.config.ts",
 		"migration:run": "tsc -p tsconfig.build.json && typeorm migration:run -d ./dist/src/config/typeorm-migrations.config.js",
 		"migration:generate": "tsc -p tsconfig.build.json && typeorm migration:generate -d ./dist/src/config/typeorm-migrations.config.js ./src/migrations/$0",
 		"migration:revert": "tsc -p tsconfig.build.json && typeorm migration:revert -d ./dist/src/config/typeorm-migrations.config.js",
@@ -42,6 +42,7 @@
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
 		"@types/supertest": "^6.0.2",
+		"@vitest/coverage-v8": "^3.1.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
