--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
-		"lint": "eslint src/**/*.ts",
+		"lint": "eslint src/**.ts",
 		"test": "vitest run",
 		"test:watch": "vitest run --watch",
 		"test:cov": "vitest run --coverage.enabled --coverage.all",
@@ -38,6 +38,7 @@
 		"@nestjs/testing": "^11.0.1",
 		"@swc/cli": "^0.6.0",
 		"@swc/core": "^1.10.7",
+		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/express": "^5.0.0",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
