--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build:
-      context: backend
+      context: .
     image: tulcz-stin-backend
     ports:
       - 8080:3000
