Add EXPOSE, ENV with app env variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 # This is an example .env file! Local development secrets must go in .env.local
-POSTGRES_URL=pg://backend:supersecretpassword@localhost:5432/database
+# Port for web application to serve static files and endpoints at
+APP_PORT=3000
+# App environment, should be set to 'production' when in production
+NODE_ENV=dev
