--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,7 @@
 		"@nestjs/serve-static": "^5.0.3",
 		"express": "^5.1.0",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
-		"typeorm": "^0.3.22"
+		"rxjs": "^7.8.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
@@ -42,7 +41,6 @@
 		"@swc/core": "^1.10.7",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
 		"@types/supertest": "^6.0.2",
 		"@vitest/coverage-v8": "^3.1.2",
