--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,7 @@
 		"test": "vitest run",
 		"test:watch": "vitest run --watch",
 		"test:cov": "vitest run --coverage.enabled --coverage.all",
-		"test:e2e": "vitest run --config vitest-e2e.config.ts",
-		"migration:run": "tsc -p tsconfig.build.json && typeorm migration:run -d ./dist/src/config/typeorm-migrations.config.js",
-		"migration:generate": "tsc -p tsconfig.build.json && typeorm migration:generate -d ./dist/src/config/typeorm-migrations.config.js ./src/migrations/$0",
-		"migration:revert": "tsc -p tsconfig.build.json && typeorm migration:revert -d ./dist/src/config/typeorm-migrations.config.js",
-		"schema:drop": "tsc -p tsconfig.build.json && typeorm schema:drop -d ./dist/src/config/typeorm-migrations.config.js"
+		"test:e2e": "vitest run --config vitest-e2e.config.ts"
 	},
 	"dependencies": {
 		"@nestjs/common": "^11.0.1",
