--- a/backend/package.json
+++ b/backend/package.json
@@ -15,22 +15,20 @@
 		"test": "vitest run",
 		"test:watch": "vitest run --watch",
 		"test:cov": "vitest run --coverage.enabled --coverage.all",
-		"test:e2e": "vitest run --config vitest-e2e.config.ts",
-		"migration:run": "tsc -p tsconfig.build.json && typeorm migration:run -d ./dist/src/config/typeorm-migrations.config.js",
-		"migration:generate": "tsc -p tsconfig.build.json && typeorm migration:generate -d ./dist/src/config/typeorm-migrations.config.js ./src/migrations/$0",
-		"migration:revert": "tsc -p tsconfig.build.json && typeorm migration:revert -d ./dist/src/config/typeorm-migrations.config.js",
-		"schema:drop": "tsc -p tsconfig.build.json && typeorm schema:drop -d ./dist/src/config/typeorm-migrations.config.js"
+		"test:e2e": "vitest run --config vitest-e2e.config.ts"
 	},
 	"dependencies": {
 		"@nestjs/common": "^11.0.1",
 		"@nestjs/config": "^4.0.2",
 		"@nestjs/core": "^11.0.1",
+		"@nestjs/mapped-types": "^2.1.0",
 		"@nestjs/platform-express": "^11.0.1",
 		"@nestjs/serve-static": "^5.0.3",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.2",
 		"express": "^5.1.0",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1",
-		"typeorm": "^0.3.22"
+		"rxjs": "^7.8.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
@@ -42,7 +40,6 @@
 		"@swc/core": "^1.10.7",
 		"@trivago/prettier-plugin-sort-imports": "^5.2.2",
 		"@types/express": "^5.0.0",
-		"@types/jest": "^29.5.14",
 		"@types/node": "^22.10.7",
 		"@types/supertest": "^6.0.2",
 		"@vitest/coverage-v8": "^3.1.2",
@@ -50,11 +47,9 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
 		"globals": "^16.0.0",
-		"jest": "^29.7.0",
 		"prettier": "^3.4.2",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
-		"ts-jest": "^29.2.5",
 		"ts-loader": "^9.5.2",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
