Print coverage stats on test:cov in CI workflow

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Run Vitest (Coverage)
         working-directory: backend
-        run: yarn test:cov
+        run: yarn test:cov && scripts/coverage.sh
