Add env var for Tiingo API token

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@
 APP_PORT=3000
 # App environment, should be set to 'production' when in production
 NODE_ENV=dev
+# Tiingo API token to download stock prices (visit https://tiingo.com for info)
+TIINGO_API_KEY=put_tiingo.com_api_token_here
