--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,8 @@
 .git
 .github
-backend/node_modules
-backend/coverage
-backend/dist
-backend/.yarn/*
-!backend/.yarn/releases
+node_modules
+coverage
+dist
+.env.local
+.yarn/*
+!.yarn/releases
