--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,8 +2,6 @@ name: Run code checks on commit
 
 on:
   push:
-    branches-ignore:
-      - master
 
 jobs:
   check_backend:
@@ -20,24 +18,19 @@ jobs:
           node-version: '23.x'
           check-latest: true
           cache: yarn
-          cache-dependency-path: backend/yarn.lock
+          cache-dependency-path: yarn.lock
 
       - name: Install dependencies
-        working-directory: backend
         run: yarn install
 
       - name: Run ESLint
-        working-directory: backend
         run: yarn lint
 
       - name: Run Vitest (Unit)
-        working-directory: backend
         run: yarn test
 
       - name: Run Vitest (End-to-End)
-        working-directory: backend
         run: yarn test:e2e
 
       - name: Run Vitest (Coverage)
-        working-directory: backend
         run: yarn test:cov && scripts/coverage.sh
