--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,36 +1,36 @@
 name: Run code checks on commit
 
 on:
-  push:
+    push:
 
 jobs:
-  check_backend:
-    name: Run code checks on Backend
-    runs-on: ubuntu-latest
+    check_backend:
+        name: Run code checks on Backend
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+        steps:
+            - name: Checkout
+              uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      - name: Setup NodeJS v23
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
-        with:
-          node-version: '23.x'
-          check-latest: true
-          cache: yarn
-          cache-dependency-path: yarn.lock
+            - name: Setup NodeJS v23
+              uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
+              with:
+                  node-version: "23.x"
+                  check-latest: true
+                  cache: yarn
+                  cache-dependency-path: yarn.lock
 
-      - name: Install dependencies
-        run: yarn install
+            - name: Install dependencies
+              run: yarn install
 
-      - name: Run ESLint
-        run: yarn lint
+            - name: Run ESLint
+              run: yarn lint
 
-      - name: Run Vitest (Unit)
-        run: yarn test
+            - name: Run Vitest (Unit)
+              run: yarn test
 
-      - name: Run Vitest (End-to-End)
-        run: yarn test:e2e
+            - name: Run Vitest (End-to-End)
+              run: yarn test:e2e
 
-      - name: Run Vitest (Coverage)
-        run: yarn test:cov && scripts/coverage.sh
+            - name: Run Vitest (Coverage)
+              run: yarn test:cov && scripts/coverage.sh
