--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,10 +12,10 @@ jobs:
             - name: Checkout
               uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
-            - name: Setup NodeJS v23
+            - name: Setup NodeJS v24
               uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
               with:
-                  node-version: "23.x"
+                  node-version: "24.x"
                   check-latest: true
                   cache: yarn
                   cache-dependency-path: yarn.lock
@@ -33,4 +33,4 @@ jobs:
               run: yarn test:e2e
 
             - name: Run Vitest (Coverage)
-              run: yarn test:cov && scripts/coverage.sh
+              run: yarn test:cov
