--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"express": "^5.1.0",
+		"nestjs-pino": "^4.4.0",
+		"pino": "^9.6.0",
+		"pino-http": "^10.4.0",
 		"reflect-metadata": "^0.2.2",
 		"rxjs": "^7.8.1"
 	},
@@ -49,6 +52,7 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
 		"globals": "^16.0.0",
+		"pino-pretty": "^13.0.0",
 		"prettier": "^3.4.2",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
