--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
 		"@nestjs/core": "^11.0.1",
 		"@nestjs/mapped-types": "^2.1.0",
 		"@nestjs/platform-express": "^11.0.1",
+		"@nestjs/platform-socket.io": "^11.1.0",
 		"@nestjs/schedule": "^6.0.0",
 		"@nestjs/serve-static": "^5.0.3",
 		"@nestjs/swagger": "^11.2.0",
+		"@nestjs/websockets": "^11.1.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.2",
 		"express": "^5.1.0",
+		"nestjs-pino": "^4.4.0",
+		"pino": "^9.6.0",
+		"pino-http": "^10.4.0",
 		"reflect-metadata": "^0.2.2",
-		"rxjs": "^7.8.1"
+		"rxjs": "^7.8.1",
+		"socket.io": "^4.8.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3.2.0",
@@ -49,6 +55,7 @@
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-prettier": "^5.2.2",
 		"globals": "^16.0.0",
+		"pino-pretty": "^13.0.0",
 		"prettier": "^3.4.2",
 		"source-map-support": "^0.5.21",
 		"supertest": "^7.0.0",
