News API integration

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ APP_PORT=3000
 NODE_ENV=dev
 # Tiingo API token to download stock prices (visit https://tiingo.com for info)
 TIINGO_API_KEY=put_tiingo.com_api_token_here
+# News API origin to fetch recommended stocks from
+NEWS_API_ORIGIN=https://some-news-api.com
