Include all files

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,5 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 !.yarn/releases
 
 # Local storage
-files/*
-!files/stock_prices_history.json
-!files/.gitkeep
+# files/*
+# !files/.gitkeep
